--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>$Tiburcio</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #0a0a0a, #1a1a1a);
+            color: #f5e042;
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 8px #42f5a1;
+        }
+
+        p {
+            font-size: 1.5em;
+            margin-bottom: 30px;
+        }
+
+        a {
+            display: inline-block;
+            padding: 15px 30px;
+            background-color: #42f5a1;
+            color: #0a0a0a;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 10px;
+            transition: all 0.3s ease;
+        }
+
+        a:hover {
+            transform: scale(1.1);
+            background-color: #f5e042;
+            color: #0a0a0a;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+    </style>
 </head>
 <body>
-    <h1>Bem-vindo ao site oficial do $TIBURCIO</h1>
+    <h1>Bem-vindo ao site oficial do $Tiburcio</h1>
     <p>Luz, energia positiva e comunidade espiritual.</p>
     <a href="https://t.me/boost/Tiburciomestreensiandor">Entre no Telegram Oficial</a>
 </body>
