--- a/index.html
+++ b/index.html
@@ -2,61 +2,139 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>$Tiburcio</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #0a0a0a, #1a1a1a);
-            color: #f5e042;
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
-            animation: fadeIn 2s ease-in-out;
-        }
+<meta charset="UTF-8">
+<title>$Tiburcio</title>
+<style>
+    /* Reset básico */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
-        h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 8px #42f5a1;
-        }
+    body {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Arial', sans-serif;
+        background: #0a0a0a;
+        overflow: hidden;
+        color: #f5e042;
+    }
 
-        p {
-            font-size: 1.5em;
-            margin-bottom: 30px;
-        }
+    /* Fundo épico animado */
+    canvas#bgCanvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
 
-        a {
-            display: inline-block;
-            padding: 15px 30px;
-            background-color: #42f5a1;
-            color: #0a0a0a;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 10px;
-            transition: all 0.3s ease;
-        }
+    h1 {
+        font-size: 3em;
+        text-shadow: 0 0 10px #42f5a1, 0 0 20px #42f5a1;
+        margin-bottom: 20px;
+    }
 
-        a:hover {
-            transform: scale(1.1);
-            background-color: #f5e042;
-            color: #0a0a0a;
-        }
+    p {
+        font-size: 1.5em;
+        margin-bottom: 30px;
+        text-shadow: 0 0 5px #f5e042;
+    }
 
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-    </style>
+    .btn {
+        display: inline-block;
+        padding: 15px 30px;
+        margin: 10px;
+        border-radius: 12px;
+        font-weight: bold;
+        text-decoration: none;
+        color: #0a0a0a;
+        background: #42f5a1;
+        transition: all 0.3s ease;
+    }
+
+    .btn:hover {
+        transform: scale(1.1);
+        background: #f5e042;
+    }
+
+    .contract {
+        margin-top: 40px;
+        font-size: 1em;
+        color: #42f5a1;
+        word-break: break-all;
+        text-align: center;
+    }
+
+</style>
 </head>
 <body>
-    <h1>Bem-vindo ao site oficial do $Tiburcio</h1>
-    <p>Luz, energia positiva e comunidade espiritual.</p>
-    <a href="https://t.me/boost/Tiburciomestreensiandor">Entre no Telegram Oficial</a>
+
+<h1>Bem-vindo ao site oficial do $Tiburcio</h1>
+<p>Luz, energia positiva e comunidade espiritual.</p>
+
+<!-- Botões interativos -->
+<a class="btn" href="https://t.me/Tiburciomestreensiandor" target="_blank">Telegram Oficial</a>
+<a class="btn" href="https://www.tiktok.com/@mestreensinador?_r=1&_t=ZS-91Twdwh4uH7" target="_blank">TikTok Oficial</a>
+
+<!-- Endereço do contrato -->
+<div class="contract">
+<b>Endereço do contrato $Tiburcio:</b><br>
+BBogUQD1TjEQrXeUjJRGft7hLB7EEVmTwanEsoPmpump
+</div>
+
+<!-- Canvas de fundo animado -->
+<canvas id="bgCanvas"></canvas>
+
+<script>
+/* Fundo épico estilo “cryptographic/light matrix” */
+const canvas = document.getElementById('bgCanvas');
+const ctx = canvas.getContext('2d');
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+const particles = [];
+const particleCount = 150;
+
+for (let i=0; i<particleCount; i++){
+    particles.push({
+        x: Math.random()*canvas.width,
+        y: Math.random()*canvas.height,
+        vx: (Math.random()-0.5)*1.5,
+        vy: (Math.random()-0.5)*1.5,
+        size: Math.random()*2+1,
+        color: `hsl(${Math.random()*360}, 80%, 60%)`
+    });
+}
+
+function animate(){
+    ctx.fillStyle = 'rgba(10,10,10,0.3)';
+    ctx.fillRect(0,0,canvas.width,canvas.height);
+
+    for (let p of particles){
+        p.x += p.vx;
+        p.y += p.vy;
+
+        if (p.x < 0 || p.x > canvas.width) p.vx *= -1;
+        if (p.y < 0 || p.y > canvas.height) p.vy *= -1;
+
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.size, 0, Math.PI*2);
+        ctx.fillStyle = p.color;
+        ctx.fill();
+    }
+
+    requestAnimationFrame(animate);
+}
+
+animate();
+
+window.addEventListener('resize', ()=>{
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+});
+</script>
+
 </body>
 </html>
