--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 <title>$Tiburcio</title>
 <style>
-    /* Reset básico */
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
@@ -20,7 +18,6 @@
         color: #f5e042;
     }
 
-    /* Fundo épico animado */
     canvas#bgCanvas {
         position: fixed;
         top: 0;
@@ -77,6 +74,8 @@
 <!-- Botões interativos -->
 <a class="btn" href="https://t.me/Tiburciomestreensiandor" target="_blank">Telegram Oficial</a>
 <a class="btn" href="https://www.tiktok.com/@mestreensinador?_r=1&_t=ZS-91Twdwh4uH7" target="_blank">TikTok Oficial</a>
+<a class="btn" href="https://x.com/metsre2255?t=oaBdBAdf9XBqihZR2aASVw&s=09" target="_blank">X Oficial</a>
+<a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram Oficial</a>
 
 <!-- Endereço do contrato -->
 <div class="contract">
@@ -88,7 +87,6 @@ BBogUQD1TjEQrXeUjJRGft7hLB7EEVmTwanEsoPmpump
 <canvas id="bgCanvas"></canvas>
 
 <script>
-/* Fundo épico estilo “cryptographic/light matrix” */
 const canvas = document.getElementById('bgCanvas');
 const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
