--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
+        text-align: center;
         height: 100vh;
         display: flex;
         flex-direction: column;
@@ -68,7 +69,7 @@
         font-weight: bold;
         text-decoration: none;
         color: #080b1d;
-        background: #42f5a1;
+        background: radial-gradient(circle at center, #000015, #000000 70%);
         font-size: 1.3em;
         transition: all 0.3s ease;
     }
