--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
     /* Botões maiores */
     .btn {
         display: inline-block;
-        padding: 18px 40px;
+        padding: 15px 30px;
         margin: 10px;
-        border-radius: 14px;
+        border-radius: 12px;
         font-weight: bold;
         text-decoration: none;
-        color: #080b1d;
-        background: radial-gradient(circle at center, #000015, #000000 70%);
-        font-size: 1.3em;
+        color: #0a0a0a;
+        background: #42f5a1;
+        font-size: 1.2em;
         transition: all 0.3s ease;
     }
 
