--- a/index.html
+++ b/index.html
@@ -118,6 +118,28 @@
         background: #f5e042;
         box-shadow: 0 0 12px #42f5a1;
     }
+
+    /* Seção do NFT */
+    .nft-section {
+        margin-top:50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nft-section h2 {
+        font-size:2.5em;
+        margin-bottom:20px;
+        text-shadow:0 0 12px #42f5a1;
+        color:#f5e042;
+    }
+
+    .nft-section img {
+        width:300px;
+        border-radius:20px;
+        box-shadow:0 0 25px #42f5a1;
+        margin-bottom:25px;
+    }
 </style>
 </head>
 <body>
@@ -134,6 +156,19 @@
 <a class="btn" href="https://x.com/metsre2255?t=oaBdBAdf9XBqihZR2aASVw&s=09" target="_blank">X Oficial</a>
 <a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram Oficial</a>
 <a class="btn" href="https://dexscreener.com/solana/DQ2zyRpBvA4CEgxfzKy2n8cXRnqMAYd9LwCtP3ZEo6Pu" target="_blank">Ver no DexScreener</a>
+
+<!-- Botão NFT -->
+<a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">NFT Oficial Tibúrcio</a>
+
+<!-- Seção do NFT -->
+<div class="nft-section">
+    <h2>NFT Oficial – Tibúrcio Mestre Ensinador</h2>
+    <img src="https://i.imgur.com/Yb7fDyF.jpeg" alt="NFT Tibúrcio">
+    <div>
+        <a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver NFT no SolSea</a>
+        <a class="btn" href="https://solscan.io/token/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver Blockchain (Solscan)</a>
+    </div>
+</div>
 
 <!-- Contrato -->
 <div class="contract-box">
