--- a/index.html
+++ b/index.html
@@ -129,9 +129,15 @@
 
     .nft-section h2 {
         font-size:2.5em;
-        margin-bottom:20px;
-        text-shadow:0 0 12px #42f5a1;
+        margin-bottom:10px;
+        text-shadow:0 0 15px #42f5a1;
         color:#f5e042;
+    }
+
+    .nft-section p {
+        font-size:1.2em;
+        margin-bottom:20px;
+        text-shadow:0 0 8px #f5e042;
     }
 
     .nft-section img {
@@ -139,6 +145,12 @@
         border-radius:20px;
         box-shadow:0 0 25px #42f5a1;
         margin-bottom:25px;
+        cursor:pointer;
+        transition:0.3s;
+    }
+
+    .nft-section img:hover {
+        transform: scale(1.05);
     }
 </style>
 </head>
@@ -162,8 +174,11 @@
 
 <!-- Seção do NFT -->
 <div class="nft-section">
-    <h2>NFT Oficial – Tibúrcio Mestre Ensinador</h2>
-    <img src="https://i.imgur.com/Yb7fDyF.jpeg" alt="NFT Tibúrcio">
+    <h2>NFT Oficial – Tibúrcio</h2>
+    <p>Mestre Ensinador – Energia, Luz e Poder Espiritual</p>
+    <a href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">
+        <img src="https://i.imgur.com/Yb7fDyF.jpeg" alt="NFT Tibúrcio">
+    </a>
     <div>
         <a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver NFT no SolSea</a>
         <a class="btn" href="https://solscan.io/token/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver Blockchain (Solscan)</a>
