--- a/index.html
+++ b/index.html
@@ -119,38 +119,13 @@
         box-shadow: 0 0 12px #42f5a1;
     }
 
-    /* Seção do NFT */
+    /* Seção NFT somente links */
     .nft-section {
-        margin-top:50px;
+        margin-top: 50px;
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
-
-    .nft-section h2 {
-        font-size:2.5em;
-        margin-bottom:10px;
-        text-shadow:0 0 15px #42f5a1;
-        color:#f5e042;
-    }
-
-    .nft-section p {
-        font-size:1.2em;
-        margin-bottom:20px;
-        text-shadow:0 0 8px #f5e042;
-    }
-
-    .nft-section img {
-        width:300px;
-        border-radius:20px;
-        box-shadow:0 0 25px #42f5a1;
-        margin-bottom:25px;
-        cursor:pointer;
-        transition:0.3s;
-    }
-
-    .nft-section img:hover {
-        transform: scale(1.05);
+        gap: 15px;
     }
 </style>
 </head>
@@ -162,27 +137,17 @@
 <h1>Bem-vindo ao site oficial do $Tiburcio</h1>
 <p>Luz, energia positiva e comunidade espiritual.</p>
 
-<!-- Botões -->
+<!-- Botões principais -->
 <a class="btn" href="https://t.me/Tiburciomestreensiandor" target="_blank">Telegram Oficial</a>
 <a class="btn" href="https://www.tiktok.com/@mestreensinador?_r=1&_t=ZS-91Twdwh4uH7" target="_blank">TikTok Oficial</a>
 <a class="btn" href="https://x.com/metsre2255?t=oaBdBAdf9XBqihZR2aASVw&s=09" target="_blank">X Oficial</a>
 <a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram Oficial</a>
 <a class="btn" href="https://dexscreener.com/solana/DQ2zyRpBvA4CEgxfzKy2n8cXRnqMAYd9LwCtP3ZEo6Pu" target="_blank">Ver no DexScreener</a>
 
-<!-- Botão NFT -->
-<a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">NFT Oficial Tibúrcio</a>
-
-<!-- Seção do NFT -->
+<!-- NFT links apenas -->
 <div class="nft-section">
-    <h2>NFT Oficial – Tibúrcio</h2>
-    <p>Mestre Ensinador – Energia, Luz e Poder Espiritual</p>
-    <a href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">
-        <img src="https://i.imgur.com/Yb7fDyF.jpeg" alt="NFT Tibúrcio">
-    </a>
-    <div>
-        <a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver NFT no SolSea</a>
-        <a class="btn" href="https://solscan.io/token/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver Blockchain (Solscan)</a>
-    </div>
+    <a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">NFT Oficial Tibúrcio</a>
+    <a class="btn" href="https://solscan.io/token/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver Blockchain (Solscan)</a>
 </div>
 
 <!-- Contrato -->
