--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         color: #f5e042;
     }
 
-    /* Fundo de estrelas criptografadas */
     .stars {
         position: fixed;
         top: 0;
@@ -37,7 +36,6 @@
         to { transform: translateY(-2000px); }
     }
 
-    /* Partículas animadas */
     canvas#bgCanvas {
         position: fixed;
         top: 0;
@@ -60,7 +58,6 @@
         text-shadow: 0 0 8px #f5e042;
     }
 
-    /* Botões maiores */
     .btn {
         display: inline-block;
         padding: 15px 30px;
@@ -80,7 +77,6 @@
         box-shadow: 0 0 15px #42f5a1;
     }
 
-    /* Caixa do contrato com botão copiar */
     .contract-box {
         margin-top: 40px;
         display: flex;
@@ -118,15 +114,6 @@
         background: #f5e042;
         box-shadow: 0 0 12px #42f5a1;
     }
-
-    /* Seção NFT somente links */
-    .nft-section {
-        margin-top: 50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-    }
 </style>
 </head>
 <body>
@@ -144,11 +131,9 @@
 <a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram Oficial</a>
 <a class="btn" href="https://dexscreener.com/solana/DQ2zyRpBvA4CEgxfzKy2n8cXRnqMAYd9LwCtP3ZEo6Pu" target="_blank">Ver no DexScreener</a>
 
-<!-- NFT links apenas -->
-<div class="nft-section">
-    <a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">NFT Oficial Tibúrcio</a>
-    <a class="btn" href="https://solscan.io/token/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver Blockchain (Solscan)</a>
-</div>
+<!-- NFT links apenas, sem título ou imagem -->
+<a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">NFT Oficial Tibúrcio</a>
+<a class="btn" href="https://solscan.io/token/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver Blockchain (Solscan)</a>
 
 <!-- Contrato -->
 <div class="contract-box">
