--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 <!-- NFT links apenas -->
 <a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver NFT Tiburcio</a>
-<a class="btn" href="https://solscan.io/token/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver Blockchain (Solscan)</a>
+<!-- Botão do Solscan removido -->
 
 <!-- Contrato -->
 <div class="contract-box">
@@ -187,8 +187,6 @@ function animate(){
 
     requestAnimationFrame(animate);
 }
-
-animate();
 
 window.addEventListener('resize', ()=>{
     canvas.width = window.innerWidth;
