--- a/index.html
+++ b/index.html
@@ -19,23 +19,6 @@
         color: #f5e042;
     }
 
-    .stars {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url('https://i.imgur.com/3u3zKQh.png');
-        opacity: 0.25;
-        animation: moveStars 80s linear infinite;
-        z-index: -3;
-    }
-
-    @keyframes moveStars {
-        from { transform: translateY(0); }
-        to { transform: translateY(-2000px); }
-    }
-
     canvas#bgCanvas {
         position: fixed;
         top: 0;
@@ -118,7 +101,6 @@
 </head>
 <body>
 
-<div class="stars"></div>
 <canvas id="bgCanvas"></canvas>
 
 <h1>Bem-vindo ao site oficial do $Tiburcio</h1>
@@ -130,10 +112,7 @@
 <a class="btn" href="https://x.com/metsre2255?t=oaBdBAdf9XBqihZR2aASVw&s=09" target="_blank">X Oficial</a>
 <a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram Oficial</a>
 <a class="btn" href="https://dexscreener.com/solana/DQ2zyRpBvA4CEgxfzKy2n8cXRnqMAYd9LwCtP3ZEo6Pu" target="_blank">Ver no DexScreener</a>
-
-<!-- NFT links apenas -->
 <a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver NFT Tiburcio</a>
-<!-- Botão do Solscan removido -->
 
 <!-- Contrato -->
 <div class="contract-box">
@@ -148,46 +127,45 @@ function copyContract() {
     alert("Contrato copiado!");
 }
 
-/* Partículas animadas */
+/* Estrelas animadas no fundo */
 const canvas = document.getElementById('bgCanvas');
 const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-const particles = [];
-const particleCount = 170;
+const stars = [];
+const starCount = 200;
 
-for (let i=0; i<particleCount; i++){
-    particles.push({
+// Criar estrelas
+for(let i=0;i<starCount;i++){
+    stars.push({
         x: Math.random()*canvas.width,
         y: Math.random()*canvas.height,
-        vx: (Math.random()-0.5)*1.4,
-        vy: (Math.random()-0.5)*1.4,
-        size: Math.random()*2+1,
-        color: `hsl(${Math.random()*360}, 80%, 60%)`
+        size: Math.random()*2 + 1,
+        speed: Math.random()*0.5 + 0.1
     });
 }
 
-function animate(){
-    ctx.fillStyle = 'rgba(10,10,10,0.25)';
+// Animar estrelas
+function animateStars(){
+    ctx.fillStyle = '#000010';
     ctx.fillRect(0,0,canvas.width,canvas.height);
 
-    for (let p of particles){
-        p.x += p.vx;
-        p.y += p.vy;
-
-        if (p.x < 0 || p.x > canvas.width) p.vx *= -1;
-        if (p.y < 0 || p.y > canvas.height) p.vy *= -1;
-
+    for(let s of stars){
+        s.y -= s.speed;
+        if(s.y < 0) s.y = canvas.height;
         ctx.beginPath();
-        ctx.arc(p.x, p.y, p.size, 0, Math.PI*2);
-        ctx.fillStyle = p.color;
+        ctx.arc(s.x,s.y,s.size,0,Math.PI*2);
+        ctx.fillStyle = 'white';
         ctx.fill();
     }
 
-    requestAnimationFrame(animate);
+    requestAnimationFrame(animateStars);
 }
 
+animateStars();
+
+// Ajustar canvas ao redimensionar
 window.addEventListener('resize', ()=>{
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
