--- a/index.html
+++ b/index.html
@@ -127,48 +127,55 @@ function copyContract() {
     alert("Contrato copiado!");
 }
 
-/* Estrelas animadas no fundo */
+/* Fundo animado de estrelas com profundidade */
 const canvas = document.getElementById('bgCanvas');
 const ctx = canvas.getContext('2d');
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
+
+let width = canvas.width = window.innerWidth;
+let height = canvas.height = window.innerHeight;
 
 const stars = [];
-const starCount = 200;
+const STAR_COUNT = 300;
 
 // Criar estrelas
-for(let i=0;i<starCount;i++){
+for(let i=0; i<STAR_COUNT; i++){
     stars.push({
-        x: Math.random()*canvas.width,
-        y: Math.random()*canvas.height,
-        size: Math.random()*2 + 1,
-        speed: Math.random()*0.5 + 0.1
+        x: Math.random()*width,
+        y: Math.random()*height,
+        z: Math.random()*1, // profundidade
+        size: Math.random()*1.5 + 0.5,
+        speed: Math.random()*0.5 + 0.2
     });
 }
 
-// Animar estrelas
-function animateStars(){
+function draw(){
     ctx.fillStyle = '#000010';
-    ctx.fillRect(0,0,canvas.width,canvas.height);
+    ctx.fillRect(0,0,width,height);
 
     for(let s of stars){
-        s.y -= s.speed;
-        if(s.y < 0) s.y = canvas.height;
+        // mover estrelas para cima
+        s.y -= s.speed * (s.z+0.5); // profundidade influencia velocidade
+
+        if(s.y < 0){
+            s.y = height;
+            s.x = Math.random()*width;
+            s.z = Math.random();
+        }
+
         ctx.beginPath();
-        ctx.arc(s.x,s.y,s.size,0,Math.PI*2);
-        ctx.fillStyle = 'white';
+        ctx.arc(s.x, s.y, s.size*(s.z+0.5), 0, Math.PI*2);
+        ctx.fillStyle = `hsl(${Math.random()*360}, 80%, 70%)`;
         ctx.fill();
     }
 
-    requestAnimationFrame(animateStars);
+    requestAnimationFrame(draw);
 }
 
-animateStars();
+draw();
 
-// Ajustar canvas ao redimensionar
 window.addEventListener('resize', ()=>{
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+    width = canvas.width = window.innerWidth;
+    height = canvas.height = window.innerHeight;
 });
 </script>
 
