--- a/index.html
+++ b/index.html
@@ -59,44 +59,6 @@
         background: #f5e042;
         box-shadow: 0 0 15px #42f5a1;
     }
-
-    .contract-box {
-        margin-top: 40px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-    }
-
-    #contractText {
-        font-size: 1.2em;
-        padding: 12px;
-        background: rgba(255,255,255,0.08);
-        border-radius: 10px;
-        border: 1px solid rgba(255,255,255,0.2);
-        color: #42f5a1;
-        text-shadow: 0 0 6px #42f5a1;
-        word-break: break-all;
-        max-width: 90%;
-        text-align: center;
-    }
-
-    #copyBtn {
-        padding: 12px 25px;
-        border: none;
-        background: #42f5a1;
-        font-size: 1.1em;
-        border-radius: 10px;
-        cursor: pointer;
-        font-weight: bold;
-        color: #000;
-        transition: 0.3s;
-    }
-
-    #copyBtn:hover {
-        background: #f5e042;
-        box-shadow: 0 0 12px #42f5a1;
-    }
 </style>
 </head>
 <body>
@@ -106,27 +68,12 @@
 <h1>Bem-vindo ao site oficial do $Tiburcio</h1>
 <p>Luz, energia positiva e comunidade espiritual.</p>
 
-<!-- Botões principais -->
+<!-- Botões oficiais -->
 <a class="btn" href="https://t.me/Tiburciomestreensiandor" target="_blank">Telegram Oficial</a>
 <a class="btn" href="https://www.tiktok.com/@mestreensinador?_r=1&_t=ZS-91Twdwh4uH7" target="_blank">TikTok Oficial</a>
-<a class="btn" href="https://x.com/metsre2255?t=oaBdBAdf9XBqihZR2aASVw&s=09" target="_blank">X Oficial</a>
 <a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram Oficial</a>
-<a class="btn" href="https://dexscreener.com/solana/DQ2zyRpBvA4CEgxfzKy2n8cXRnqMAYd9LwCtP3ZEo6Pu" target="_blank">Ver no DexScreener</a>
-<a class="btn" href="https://solsea.io/n/Gxb4gvLraJf4fyTxHiEDPtwLVuTi7Q7dmBKRA38L3Edc" target="_blank">Ver NFT Tiburcio</a>
-
-<!-- Contrato -->
-<div class="contract-box">
-    <div id="contractText">BBogUQD1TjEQrXeUjJRGft7hLB7EEVmTwanEsoPmpump</div>
-    <button id="copyBtn" onclick="copyContract()">Copiar Contrato</button>
-</div>
 
 <script>
-function copyContract() {
-    const text = document.getElementById("contractText").innerText;
-    navigator.clipboard.writeText(text);
-    alert("Contrato copiado!");
-}
-
 // Fundo animado de estrelas
 window.addEventListener('load', () => {
     const canvas = document.getElementById('bgCanvas');
