--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 <title>$Tiburcio</title>
+
 <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -13,7 +15,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        font-family: 'Arial', sans-serif;
+        font-family: Arial, sans-serif;
         background: radial-gradient(circle at top, #080b1d, #000);
         overflow: hidden;
         color: #f5e042;
@@ -61,6 +63,7 @@
     }
 </style>
 </head>
+
 <body>
 
 <canvas id="bgCanvas"></canvas>
@@ -68,13 +71,16 @@
 <h1>Bem-vindo ao site oficial do $Tiburcio</h1>
 <p>Luz, energia positiva e comunidade espiritual.</p>
 
-<!-- Botões oficiais -->
-<a class="btn" href="https://t.me/Tiburciomestreensiandor" target="_blank">Telegram Oficial</a>
-<a class="btn" href="https://www.tiktok.com/@mestreensinador?_r=1&_t=ZS-91Twdwh4uH7" target="_blank">TikTok Oficial</a>
-<a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram Oficial</a>
+<!-- Redes oficiais -->
+<a class="btn" href="https://www.tiktok.com/@mestreensinador?_r=1&_t=ZS-91Twdwh4uH7" target="_blank">
+    TikTok Oficial
+</a>
+
+<a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">
+    Instagram Oficial
+</a>
 
 <script>
-// Fundo animado de estrelas
 window.addEventListener('load', () => {
     const canvas = document.getElementById('bgCanvas');
     const ctx = canvas.getContext('2d');
@@ -85,30 +91,31 @@ window.addEventListener('load', () => {
     const stars = [];
     const STAR_COUNT = 300;
 
-    for(let i=0; i<STAR_COUNT; i++){
+    for (let i = 0; i < STAR_COUNT; i++) {
         stars.push({
-            x: Math.random()*width,
-            y: Math.random()*height,
+            x: Math.random() * width,
+            y: Math.random() * height,
             z: Math.random(),
-            size: Math.random()*1.5 + 0.5,
-            speed: Math.random()*0.5 + 0.2
+            size: Math.random() * 1.5 + 0.5,
+            speed: Math.random() * 0.5 + 0.2
         });
     }
 
-    function draw(){
+    function draw() {
         ctx.fillStyle = '#000010';
-        ctx.fillRect(0,0,width,height);
+        ctx.fillRect(0, 0, width, height);
 
-        for(let s of stars){
+        for (let s of stars) {
             s.y -= s.speed * (s.z + 0.5);
-            if(s.y < 0){
+            if (s.y < 0) {
                 s.y = height;
-                s.x = Math.random()*width;
+                s.x = Math.random() * width;
                 s.z = Math.random();
             }
+
             ctx.beginPath();
-            ctx.arc(s.x, s.y, s.size*(s.z+0.5), 0, Math.PI*2);
-            ctx.fillStyle = `hsl(${Math.random()*360}, 80%, 70%)`;
+            ctx.arc(s.x, s.y, s.size * (s.z + 0.5), 0, Math.PI * 2);
+            ctx.fillStyle = `hsl(${Math.random() * 360}, 80%, 70%)`;
             ctx.fill();
         }
 
@@ -117,7 +124,7 @@ window.addEventListener('load', () => {
 
     draw();
 
-    window.addEventListener('resize', ()=>{
+    window.addEventListener('resize', () => {
         width = canvas.width = window.innerWidth;
         height = canvas.height = window.innerHeight;
     });
