--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 <a class="btn" href="https://www.facebook.com/share/1Gw1pZ9pqQ/" target="_blank">Facebook</a>
 <a class="btn" href="https://youtube.com/@mestreensinador1.?si=qU9Jg8wpYYC8XIjZ" target="_blank">YouTube</a>
 <a class="btn" href="https://x.com/metsre2255" target="_blank">X Oficial</a>
+<a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram</a>
 
 <!-- Contrato -->
 <div class="contract-box">
