--- a/index.html
+++ b/index.html
@@ -59,44 +59,6 @@
         background: #f5e042;
         box-shadow: 0 0 15px #42f5a1;
     }
-
-    .contract-box {
-        margin-top: 40px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-    }
-
-    #contractText {
-        font-size: 1.2em;
-        padding: 12px;
-        background: rgba(255,255,255,0.08);
-        border-radius: 10px;
-        border: 1px solid rgba(255,255,255,0.2);
-        color: #42f5a1;
-        text-shadow: 0 0 6px #42f5a1;
-        word-break: break-all;
-        max-width: 90%;
-        text-align: center;
-    }
-
-    #copyBtn {
-        padding: 12px 25px;
-        border: none;
-        background: #42f5a1;
-        font-size: 1.1em;
-        border-radius: 10px;
-        cursor: pointer;
-        font-weight: bold;
-        color: #000;
-        transition: 0.3s;
-    }
-
-    #copyBtn:hover {
-        background: #f5e042;
-        box-shadow: 0 0 12px #42f5a1;
-    }
 </style>
 </head>
 <body>
@@ -109,23 +71,9 @@
 <!-- Botões principais -->
 <a class="btn" href="https://www.facebook.com/share/1Gw1pZ9pqQ/" target="_blank">Facebook</a>
 <a class="btn" href="https://youtube.com/@mestreensinador1.?si=qU9Jg8wpYYC8XIjZ" target="_blank">YouTube</a>
-<a class="btn" href="https://x.com/metsre2255" target="_blank">X Oficial</a>
 <a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram</a>
 
-<!-- Contrato -->
-<div class="contract-box">
-    <div id="contractText">BBogUQD1TjEQrXeUjJRGft7hLB7EEVmTwanEsoPmpump</div>
-    <button id="copyBtn" onclick="copyContract()">Copiar Contrato</button>
-</div>
-
 <script>
-function copyContract() {
-    const text = document.getElementById("contractText").innerText;
-    navigator.clipboard.writeText(text);
-    alert("Contrato copiado!");
-}
-
-// Fundo animado de estrelas
 window.addEventListener('load', () => {
     const canvas = document.getElementById('bgCanvas');
     const ctx = canvas.getContext('2d');
@@ -136,30 +84,30 @@ window.addEventListener('load', () => {
     const stars = [];
     const STAR_COUNT = 300;
 
-    for(let i=0; i<STAR_COUNT; i++){
+    for(let i = 0; i < STAR_COUNT; i++){
         stars.push({
-            x: Math.random()*width,
-            y: Math.random()*height,
+            x: Math.random() * width,
+            y: Math.random() * height,
             z: Math.random(),
-            size: Math.random()*1.5 + 0.5,
-            speed: Math.random()*0.5 + 0.2
+            size: Math.random() * 1.5 + 0.5,
+            speed: Math.random() * 0.5 + 0.2
         });
     }
 
     function draw(){
         ctx.fillStyle = '#000010';
-        ctx.fillRect(0,0,width,height);
+        ctx.fillRect(0, 0, width, height);
 
         for(let s of stars){
             s.y -= s.speed * (s.z + 0.5);
             if(s.y < 0){
                 s.y = height;
-                s.x = Math.random()*width;
+                s.x = Math.random() * width;
                 s.z = Math.random();
             }
             ctx.beginPath();
-            ctx.arc(s.x, s.y, s.size*(s.z+0.5), 0, Math.PI*2);
-            ctx.fillStyle = `hsl(${Math.random()*360}, 80%, 70%)`;
+            ctx.arc(s.x, s.y, s.size * (s.z + 0.5), 0, Math.PI * 2);
+            ctx.fillStyle = `hsl(${Math.random() * 360}, 80%, 70%)`;
             ctx.fill();
         }
 
@@ -168,7 +116,7 @@ window.addEventListener('load', () => {
 
     draw();
 
-    window.addEventListener('resize', ()=>{
+    window.addEventListener('resize', () => {
         width = canvas.width = window.innerWidth;
         height = canvas.height = window.innerHeight;
     });
