--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@ p {
 <h1>Mestre Ensinador</h1>
 <p>Luz • Consciência • Expansão</p>
 
-<!-- LINKS MANTIDOS -->
+<!-- LINKS OFICIAIS -->
 <a class="btn" href="https://www.facebook.com/share/1Gw1pZ9pqQ/" target="_blank">Facebook</a>
 <a class="btn" href="https://youtube.com/@mestreensinador1.?si=qU9Jg8wpYYC8XIjZ" target="_blank">YouTube</a>
 <a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram</a>
+<a class="btn" href="https://www.tiktok.com/@mestreensinador?_r=1&_t=ZS-92edf2i1T1h" target="_blank">TikTok</a>
 
 <script>
 const canvas = document.getElementById("vortex");
