--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>TiburcioStar | Light & Energy</title>
+<title>Mestre Ensinador</title>
 
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -11,7 +12,7 @@ body {
     height: 100vh;
     overflow: hidden;
     font-family: Arial, sans-serif;
-    background: #0b0f1a; /* Mudança de cor sutil */
+    background: #000;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -76,10 +77,10 @@ p {
 
 <body>
 
-<canvas id="vortex-star"></canvas>
+<canvas id="vortex"></canvas>
 
-<h1>TiburcioStar</h1>
-<p>Light • Consciousness • Expansion</p>
+<h1>Mestre Ensinador</h1>
+<p>Luz • Consciência • Expansão</p>
 
 <!-- LINKS OFICIAIS -->
 <a class="btn" href="https://www.facebook.com/share/1Gw1pZ9pqQ/" target="_blank">Facebook</a>
@@ -88,7 +89,7 @@ p {
 <a class="btn" href="https://www.tiktok.com/@mestreensinador?_r=1&_t=ZS-92edf2i1T1h" target="_blank">TikTok</a>
 
 <script>
-const canvas = document.getElementById("vortex-star");
+const canvas = document.getElementById("vortex");
 const ctx = canvas.getContext("2d");
 
 let w = canvas.width = window.innerWidth;
