--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -82,6 +81,14 @@ p {
 <h1>Mestre Ensinador</h1>
 <p>Luz • Consciência • Expansão</p>
 
+<!-- Endereço do contrato do token -->
+<p style="margin: 10px 0; font-size: 1em; color: #42f5a1; word-break: break-all;">
+Token Contract: <strong>BtgMRbnpuyjwQXQHEfYfiwuZkWmsbb7x6F3Zt79Vpump</strong>
+</p>
+
+<!-- BOTÃO PARA COPIAR O ENDEREÇO -->
+<a class="btn" href="#" onclick="copyContract()" style="background:#ff6f91;">Copiar Contrato</a>
+
 <!-- LINKS OFICIAIS -->
 <a class="btn" href="https://www.facebook.com/share/1Gw1pZ9pqQ/" target="_blank">Facebook</a>
 <a class="btn" href="https://youtube.com/@mestreensinador1.?si=qU9Jg8wpYYC8XIjZ" target="_blank">YouTube</a>
@@ -144,6 +151,14 @@ function draw() {
 }
 
 draw();
+
+// Função para copiar contrato
+function copyContract() {
+    const contract = "BtgMRbnpuyjwQXQHEfYfiwuZkWmsbb7x6F3Zt79Vpump";
+    navigator.clipboard.writeText(contract).then(() => {
+        alert("Endereço do contrato copiado!");
+    });
+}
 </script>
 
 </body>
