--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ Token Contract: <strong>BtgMRbnpuyjwQXQHEfYfiwuZkWmsbb7x6F3Zt79Vpump</strong>
 <a class="btn" href="https://youtube.com/@mestreensinador1.?si=qU9Jg8wpYYC8XIjZ" target="_blank">YouTube</a>
 <a class="btn" href="https://www.instagram.com/mestre_ensinador1?igsh=MWV3OGYwNTVtc3JzeQ==" target="_blank">Instagram</a>
 <a class="btn" href="https://www.tiktok.com/@mestreensinador?_r=1&_t=ZS-92edf2i1T1h" target="_blank">TikTok</a>
+<a class="btn" href="https://x.com/StarTiburcio" target="_blank">X (Twitter)</a>
 
 <script>
 const canvas = document.getElementById("vortex");
@@ -152,7 +153,6 @@ function draw() {
 
 draw();
 
-// Função para copiar contrato
 function copyContract() {
     const contract = "BtgMRbnpuyjwQXQHEfYfiwuZkWmsbb7x6F3Zt79Vpump";
     navigator.clipboard.writeText(contract).then(() => {
